--- a/Layout/NavMenu.razor
+++ b/Layout/NavMenu.razor
@@ -1,4 +1,4 @@
-﻿
+﻿@inject IJSRuntime JS
 
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
@@ -34,7 +34,17 @@
         </NavLink>
         </div>
 
+        
+    @if (loggedUser != null)
+    {
 
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="impianti">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Impianti
+            </NavLink>
+        </li>
+
+    }
        
         <li class="nav-item px-3">
         <NavLink class="nav-link" href="login">
@@ -58,4 +68,14 @@
     {
         collapseNavMenu = !collapseNavMenu;
     }
+
+
+    private string? loggedUser;
+
+    protected override async Task OnInitializedAsync()
+    {
+        loggedUser = await JS.InvokeAsync<string>("sessionStorage.getItem", "loggedUser");
+    }
+
+
 }
