--- a/Pages/Impianti.razor
+++ b/Pages/Impianti.razor
@@ -57,7 +57,7 @@
                     @foreach (var imp in impiantiCliente)
                     {
                         <div class="col-md-4">
-                            <div class="card shadow-sm h-100 border-0">
+                            <div class="card shadow-sm h-100 border-0" style="background-color:@(imp.colore ?? "#e3f2fd") !important;">
 
                                 <div class="card-body">
                                     <h5 class="card-title">@imp.nome</h5>
